# orparapp

./: .gitignore  AUTHORS  LICENSE  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  configure_template  libtool
autom4te.cache/: output.1  output.5  requests  traces.1  traces.5
src/: Makefile.am  Makefile.in  MismatchMapping.cpp  MismatchMapping.h  match.cpp  match.h  nucaln.cpp  nucaln.h  stagergap.cpp  stagergap.h
src/.deps/: MismatchMapping.Plo  genoanalyzer.Plo  match.Plo  nucaln.Plo  stagergap.Plo
src/consensus/: Makefile.am  Makefile.in  blastnrow.h  boxpile.cpp  boxpile.h  consensus.h  constaxmap.cpp  constaxmap.h  dnaqualstore.h  piechart.cpp  piechart.h  stalactitegraph.h  textpile.cpp  textpile.h
src/consensus/.deps/: blastnrow.Plo  boxpile.Plo  consensus.Plo  constaxmap.Plo  dnaqualstore.Plo  piechart.Plo  stalactitegraph.Plo  textpile.Plo
src/seqana/: AlnVariantHelper.pm  Altranscript.java  DNACutter.pm  ExtractEnd.java  GCcontent.cpp  MSPcrunch.h  Makefile.am  Makefile.in  ModmRNAvalidate.java  README  README.shRNA  README.stemloop  Region.java  RegionInt.java  RegionStr.java  SWCount.pm  bam2tab.cpp  bamfilter.cpp  blast.cpp  blast.h  blastForOrtho  blpstd2tab.pl  blpurify.cpp  blrmlow.pl  clmultialnJob  clstalqc  clustalqc  clustalwmany  clustalwmany.pl  clustalwmanyFile  clustalwmanyFile.pl  combinefastqpaired  combinefastqpaired.pl  comparefastq.cpp  comparetoIndex.txt  comparetoref.R  comparetoref.conf  comparetoref.cpp  dialignmany.pl  erpin2tab.pl  (+45 more)
src/seqana/cdna/: Makefile.am  Makefile.in  Makefile.save  Peak.pm  PolyPeak.pm  PolyaPeak.pm  README  UncoverPolyA.pm  cleanfastitle  cleanshort.cpp  cleanshortread  fastadiff  rmjgix  rmpolya  solex2fas  swapESTid.pl  uniqueshortseq.cpp
src/seqana/cdna/.deps/: cleanshort.Po  uniqueshortseq.Po
src/seqana/fasta/: FastaReader.pm  Fastaseq.pm  FastaseqQual.pm  Makefile.am  Makefile.in  Makefile.save  buildhcvref.pl  combineseq.cpp  fastabund.cpp  fastaleninfo.cpp  listfaslen.pl  text2fas  text2fas.pl  uniqueseq.cpp
src/seqana/seqsep/: Makefile.am  Makefile.in  Makefile.save  README  breakFasfile.pl  estsep.cpp  fastadiscard.cpp  fastapick.cpp  fastapickpack.cpp  nameoutfile.cpp  nameoutfile.h  picknewseq.cpp  piecefasta.pl  rmfrgss.cpp  rmseqbyid.cpp  sephumangb.pl  seqdiv.conf  seqdiv.cpp  seqdiv.sql  seqsep.cpp  splitnr.pl  tmp.sql  version.cpp  version.h  vrtsep.pl
src/seqana/seqsep/.deps/: estsep.Po  fastadiscard.Po  fastapick.Po  nameoutfile.Po  picknewseq.Po  rmfrgss.Po  rmseqbyid.Po  seqdiv.Po  seqsep.Po  version.Po
src/seqana/test/: test.fas  test.pl  testBoxPile.cpp  testComparetoref.cpp  testDnaqualstore.cpp  testMapping.cpp  testPieChart.cpp  testTextPile.cpp  testblast.cpp  testconsensus.cpp  testgenoanalyzer.cpp  testthread.cpp
src/seqconv/: BroadGTF.sql  BroadGTFtotab  CutDetector.pm  GFF3Converter.pm  GTFConverter.pm  Makefile.am  Makefile.in  MiraOracleLoader.pm  MiraResult.pm  NCBIGFF3totab.pl  README  README.assemble  README.fishing  README.mara.test  README.miradb  README.runmira  aceDNA2fas  assemble_Nov21.notes  bam2cleanfastq.cpp  breakfastq.pl  buildqc.pl  buildrequest.pl  buildresult.pl  checkdupfasq.cpp  checkdupfasta.cpp  dna2prt.pl  fas2ace.pl  fasgss2ace  fasprt2ace.pl  fastasub.pl  fastq2fasta.cpp  fastq2tab.cpp  fishing.cpp  gff2ace.pl  gff3totab.sql  gs2ace.pl  gssfas2ace.pl  gtf2ace.pl  linearize.cfg  linearize.cpp  (+23 more)
src/seqconv/test/: testMiraResult.pl  testOracle.pl  testmiraloader.pl  testrunmira.pl
src/test/: Makefile.in
