bin_PROGRAMS = bam2cleanfastq checkdupfasq  checkdupfasta \
    cpfasqpart cpfastapart fastareduceid fastq2fasta fastq2tab fastqpick \
	 fastqreduceid fastqstat fishing linearize parsencbi16s parsencbissu \
    parsepatricssu parserdpssu parsesilvassu revcomp rna2dna tandemcount trimfastq


bam2cleanfastq_SOURCES = bam2cleanfastq.cpp
bam2cleanfastq_CXXFLAGS = $(bam_CXXFLAGS)
bam2cleanfastq_LDFLAGS = $(bam_LDFLAGS)
bam2cleanfastq_LDADD = $(bam_LIBS)

checkdupfasq_SOURCES = checkdupfasq.cpp
checkdupfasta_SOURCES = checkdupfasta.cpp
cpfasqpart_SOURCES = cpfasqpart.cpp
cpfastapart_SOURCES = cpfastapart.cpp
fastareduceid_SOURCES = fastareduceid.cpp
fastq2fasta_SOURCES = fastq2fasta.cpp
fastq2tab_SOURCES = fastq2tab.cpp
fastqpick_SOURCES = fastqpick.cpp
fastqreduceid_SOURCES = fastqreduceid.cpp
fastqstat_SOURCES = fastqstat.cpp

fishing_SOURCES = fishing.cpp 
fishing_CXXFLAGS = $(boost_CXXFLAGS)
fishing_LDFLAGS = $(boost_LDFLAGS)
fishing_LDADD = $(boost_LIBS)

linearize_SOURCES = linearize.cpp 
linearize_CXXFLAGS = $(boost_CXXFLAGS)
linearize_LDFLAGS = $(boost_LDFLAGS)
linearize_LDADD = $(boost_LIBS)

parsencbi16s_SOURCES = parsencbi16s.cpp
parsencbissu_SOURCES = parsencbissu.cpp
parsepatricssu_SOURCES = parsepatricssu.cpp
parserdpssu_SOURCES = parserdpssu.cpp
parsesilvassu_SOURCES = parsesilvassu.cpp
revcomp_SOURCES = revcomp.cpp
rna2dna_SOURCES = rna2dna.cpp
tandemcount_SOURCES = tandemcount.cpp
trimfastq_SOURCES = trimfastq.cpp 
