AM_CXXFLAGS=$(orpara_CXXFLAGS)
AM_LDFLAGS=$(orpara_LDFLAGS)
LDADD=$(orpara_LIBS)

bin_PROGRAMS = estsep seqsep seqdiv rmseqbyid fastapick fastadiscard fastapickpack picknewseq rmfrgss

seqsep_SOURCES = seqsep.cpp

rmfrgss_SOURCES = rmfrgss.cpp

estsep_SOURCES = estsep.cpp

picknewseq_SOURCES = picknewseq.cpp version.h version.cpp

seqdiv_SOURCES = seqdiv.cpp nameoutfile.h nameoutfile.cpp

rmseqbyid_SOURCES = rmseqbyid.cpp

fastapick_SOURCES = fastapick.cpp

fastapickpack_SOURCES = fastapick.cpp

fastadiscard_SOURCES = fastadiscard.cpp

